Utworzono za pomocą Colab

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGC06455YbeYpIJgioew+D",
+      "authorship_tag": "ABX9TyOvHcJ6e/mW65DHK4VloH+f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,72 +63,110 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "### Zadanie 2\n",
+        "#Zadanie 2\n",
+        "% Fakty dotyczące ojców\n",
+        "ojciec(jan, anna).\n",
+        "ojciec(piotr, kasia).\n",
+        "ojciec(jozef, jan).\n",
+        "ojciec(edward, piotr).\n",
+        "ojciec(stanislaw, jozef).\n",
+        "ojciec(henryk, edward).\n",
+        "ojciec(feliks, stanislaw).\n",
+        "ojciec(wladyslaw, henryk).\n",
         "\n",
-        "1.  kobieta(X) – X jest kobietą\n",
+        "% Fakty dotyczące matek\n",
+        "matka(maria, anna).\n",
+        "matka(ewa, kasia).\n",
+        "matka(barbara, maria).\n",
+        "matka(ewa, piotr).\n",
+        "matka(zofia, barbara).\n",
+        "matka(helena, ewa).\n",
+        "matka(karolina, zofia).\n",
+        "matka(maria, helena).\n",
         "\n",
-        "kobieta(X) :- \\+ mezczyzna(X).\n",
+        "% Fakty dotyczące mężczyzn\n",
+        "mezczyzna(jan).\n",
+        "mezczyzna(piotr).\n",
+        "mezczyzna(jozef).\n",
+        "mezczyzna(edward).\n",
+        "mezczyzna(stanislaw).\n",
+        "mezczyzna(henryk).\n",
+        "mezczyzna(feliks).\n",
+        "mezczyzna(wladyslaw).\n",
         "\n",
-        "1.  ojciec(X, Y) – X jest ojcem Y\n",
+        "% Fakty dotyczące osób\n",
+        "osoba(jan).\n",
+        "osoba(piotr).\n",
+        "osoba(jozef).\n",
+        "osoba(edward).\n",
+        "osoba(stanislaw).\n",
+        "osoba(henryk).\n",
+        "osoba(feliks).\n",
+        "osoba(wladyslaw).\n",
+        "osoba(anna).\n",
+        "osoba(kasia).\n",
+        "osoba(maria).\n",
+        "osoba(ewa).\n",
+        "osoba(barbara).\n",
+        "osoba(zofia).\n",
+        "osoba(helena).\n",
+        "osoba(karolina).\n",
         "\n",
+        "% 1. kobieta(X)\n",
+        "kobieta(X) :- osoba(X), \\+ mezczyzna(X).\n",
+        "\n",
+        "% 2. ojciec(X, Y) – X jest ojcem Y\n",
         "ojciec(X, Y) :- rodzic(X, Y), mezczyzna(X).\n",
         "\n",
-        "1.  matka(X, Y) – X jest matką Y\n",
-        "\n",
+        "% 3. matka(X, Y) – X jest matką Y\n",
         "matka(X, Y) :- rodzic(X, Y), kobieta(X).\n",
         "\n",
-        "1. corka(X, Y) – X jest córką Y\n",
+        "% 4. rodzic(X, Y) – X jest rodzicem Y\n",
+        "rodzic(X, Y) :- ojciec(X, Y).\n",
+        "rodzic(X, Y) :- matka(X, Y).\n",
         "\n",
+        "% 5. corka(X, Y) – X jest córką Y\n",
         "corka(X, Y) :- rodzic(Y, X), kobieta(X).\n",
         "\n",
-        "1. brat_rodzony(X, Y) – X jest rodzonym bratem Y\n",
+        "% 6. brat_rodzony(X, Y) – X jest rodzonym bratem Y\n",
+        "brat_rodzony(X, Y) :- rodzic(Z, X), rodzic(Z, Y), mezczyzna(X), X \\= Y.\n",
         "\n",
-        "brat_rodzony(X, Y) :- rodzic(Z, X), rodzic(Z, Y), X \\= Y, mezczyzna(X).\n",
+        "% 7. brat_przyrodni(X, Y) – X jest przyrodnim bratem Y\n",
+        "brat_przyrodni(X, Y) :- rodzic(A, X), rodzic(B, Y), A \\= B, mezczyzna(X), X \\= Y.\n",
         "\n",
-        "1. brat_przyrodni(X, Y) – X jest przyrodnim bratem Y\n",
+        "% 8. kuzyn(X, Y) – X jest kuzynem Y\n",
+        "kuzyn(X, Y) :- rodzic(Z1, X), rodzic(Z2, Y), brat_rodzony(Z1, Z2).\n",
         "\n",
-        "brat_przyrodni(X, Y) :- rodzic(Z, X), rodzic(W, Y), Z \\= W, X \\= Y, mezczyzna(X).\n",
-        "\n",
-        "1.  kuzyn(X, Y) – X jest kuzynem Y\n",
-        "\n",
-        "kuzyn(X, Y) :- rodzic(Z, X), rodzic(W, Y), brat_rodzony(Z, W), X \\= Y.\n",
-        "\n",
-        "1. dziadek_od_strony_ojca(X, Y) – X jest dziadkiem od strony ojca dla Y\n",
-        "\n",
+        "% 9. dziadek_od_strony_ojca(X, Y) – X jest dziadkiem od strony ojca dla Y\n",
         "dziadek_od_strony_ojca(X, Y) :- ojciec(X, Z), ojciec(Z, Y).\n",
         "\n",
-        "1. dziadek_od_strony_matki(X, Y) – X jest dziadkiem od strony matki dla Y\n",
-        "\n",
+        "% 10. dziadek_od_strony_matki(X, Y) – X jest dziadkiem od strony matki dla Y\n",
         "dziadek_od_strony_matki(X, Y) :- ojciec(X, Z), matka(Z, Y).\n",
         "\n",
-        "1. dziadek(X, Y) – X jest dziadkiem Y\n",
+        "% 11. dziadek(X, Y) – X jest dziadkiem Y\n",
+        "dziadek(X, Y) :- ojciec(X, Z), rodzic(Z, Y).\n",
         "\n",
-        "dziadek(X, Y) :- rodzic(X, Z), rodzic(Z, Y), mezczyzna(X).\n",
+        "% 12. babcia(X, Y) – X jest babcią Y\n",
+        "babcia(X, Y) :- matka(X, Z), rodzic(Z, Y).\n",
         "\n",
-        "1. babcia(X, Y) – X jest babcią Y\n",
+        "% 13. wnuczka(X, Y) – Y jest wnuczką X\n",
+        "wnuczka(X, Y) :- rodzic(Y, Z), corka(X, Z).\n",
         "\n",
-        "babcia(X, Y) :- rodzic(X, Z), rodzic(Z, Y), kobieta(X).\n",
-        "\n",
-        "1. wnuczka(X, Y) – Y jest wnuczką X\n",
-        "\n",
-        "wnuczka(X, Y) :- rodzic(Y, Z), rodzic(Z, X), kobieta(X).\n",
-        "\n",
-        "1. przodek_do2pokolenia_wstecz(X, Y) – X jest przodkiem Y do drugiego pokolenia wstecz\n",
-        "\n",
+        "% 14. przodek_do2pokolenia_wstecz(X, Y) – X jest przodkiem Y do drugiego pokolenia wstecz\n",
         "przodek_do2pokolenia_wstecz(X, Y) :- rodzic(X, Y).\n",
         "przodek_do2pokolenia_wstecz(X, Y) :- rodzic(X, Z), rodzic(Z, Y).\n",
         "\n",
-        "1. przodek_do3pokolenia_wstecz(X, Y) – X jest przodkiem Y do trzeciego pokolenia wstecz\n",
-        "\n",
-        "przodek_do3pokolenia_wstecz(X, Y) :- rodzic(X, Y).\n",
-        "przodek_do3pokolenia_wstecz(X, Y) :- rodzic(X, Z), rodzic(Z, Y).\n",
-        "przodek_do3pokolenia_wstecz(X, Y) :- rodzic(X, Z), rodzic(Z, W), rodzic(W, Y)."
+        "% 15. przodek_do3pokolenia_wstecz(X, Y) – X jest przodkiem Y do trzeciego pokolenia wstecz\n",
+        "przodek_do3pokolenia_wstecz(X, Y) :- przodek_do2pokolenia_wstecz(X, Y).\n",
+        "przodek_do3pokolenia_wstecz(X, Y) :- rodzic(X, Z), przodek_do2pokolenia_wstecz(Z, Y).\n"
       ],
       "metadata": {
-        "id": "ttuOaqWLYMzR"
-      }
+        "id": "BqFJl9NXBYsA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
