Utworzono za pomocą Colab

--- a/Prolog2.ipynb
+++ b/Prolog2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBTQmDizatwUch333aq4gz",
+      "authorship_tag": "ABX9TyNVPkd2fKBEHrkGXxZoJ2L9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,7 +261,206 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Przodek (jan, milena):\n"
+        "##Przodek (jan, milena):\n",
+        "```\n",
+        "przodek(X, Y) :- ojciec(X, Y).\n",
+        "przodek(X, Y) :- ojciec(X, Z), przodek(Z, Y).\n",
+        "```\n",
+        "###Opis:\n",
+        "\n",
+        "- Pierwsza część reguły mówi: `jan` jest przodkiem `milena`, jeśli `jan` jest jej ojcem. To jednak nie zachodzi bezpośrednio, ponieważ ojcem `milena` jest `grzegorz`.\n",
+        "-Druga część reguły działa rekursywnie: sprawdza, czy `jan` jest ojcem kogoś (w tym przypadku `elzbieta`), kto jest przodkiem `milena`.\n",
+        "-`jan` → ojciec `elzbieta`, a `elzbieta` → matka `milena`.\n",
+        "- W ten sposób `jan` zostaje uznany za przodka `milena`.\n",
+        "\n",
+        "## Brat (grzegorz, tomasz).\n",
+        "```\n",
+        "    brat(X, Y) :- mezczyzna(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
+        "    brat(X, Y) :- mezczyzna(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
+        "```\n",
+        "###Opis:\n",
+        "- Reguła najpierw sprawdza, czy `grzegorz` i `tomasz` mają wspólnego ojca. Obaj mają ojca `stanislaw`.\n",
+        "- Następnie sprawdza, czy mają wspólną matkę. Obaj mają matkę `maria`.\n",
+        "- `grzegorz` jest mężczyzną (`mezczyzna(grzegorz)` zwraca `true`), a `grzegorz \\= tomasz`.\n",
+        "- Wszystkie warunki są spełnione, więc `brat(grzegorz, tomasz)` zwraca `true`.\n",
+        "\n",
+        "## Siostra (elzbieta, teresa).\n",
+        "```\n",
+        "    siostra(X, Y) :- kobieta(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
+        "    siostra(X, Y) :- kobieta(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
+        "```\n",
+        "###Opis:\n",
+        "- Reguła najpierw sprawdza, czy `elzbieta` i `teresa` mają wspólnego ojca. Obie mają ojca `jan`.\n",
+        "- Następnie sprawdza, czy mają wspólną matkę. Obie mają matkę `helena`.\n",
+        "- `elzbieta` jest kobietą (kobieta(elzbieta) zwraca true), a elzbieta \\= teresa.\n",
+        "- Wszystkie warunki są spełnione, więc `siostra(elzbieta, teresa)` zwraca `true`.\n",
+        "\n",
+        "## Kuzyn (szymon, jakub).\n",
+        "```\n",
+        "    kuzyn(X, Y) :- ojciec(A, X), ojciec(B, Y), brat(A, B), X \\= Y.\n",
+        "```\n",
+        "###Opis:\n",
+        "- Ojcem `szymon` jest `grzegorz`, a ojcem `jakub` jest `tomasz`.\n",
+        "- Reguła sprawdza, czy `grzegorz` i `tomasz` są braćmi. Wynik dla `brat(grzegorz, tomasz)` zwrócił `true`.\n",
+        "- `szymon` i `jakub` to różne osoby ` (szymon \\= jakub)`\n",
+        "- Wszystkie warunki są spełnione, więc `kuzyn(szymon, jakub)` zwraca `true`.\n",
+        "\n",
+        "## Dziadek (kazimierz, pawel).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    dziadek(X, Y) :- ojciec(X, Z), (ojciec(Z, Y) ; matka(Z, Y)).\n",
+        "\n",
+        "    Opis działania:\n",
+        "        kazimierz jest ojcem antoni.\n",
+        "        antoni jest ojcem pawel.\n",
+        "        Reguła łączy te dwa powiązania i uznaje kazimierz za dziadka pawel.\n",
+        "        Wynik: true.\n",
+        "\n",
+        "Zapytanie: wnuk(jakub, stanislaw).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    wnuk(X, Y) :- mezczyzna(X), (dziadek(Y, X) ; babcia(Y, X)).\n",
+        "\n",
+        "    Opis działania:\n",
+        "        stanislaw jest ojcem grzegorz, a grzegorz jest ojcem jakub.\n",
+        "        Reguła dziadek(stanislaw, jakub) zwróciła true, co spełnia warunki reguły.\n",
+        "        jakub jest mężczyzną (mezczyzna(jakub) zwraca true).\n",
+        "        Wszystkie warunki są spełnione, więc wnuk(jakub, stanislaw) zwraca true.\n",
+        "\n",
+        "Zapytanie: tesc(jan, maciej).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    tesc(X, Y) :- ojciec(X, Z), malzenstwo(Z, Y).\n",
+        "\n",
+        "    Opis działania:\n",
+        "        jan jest ojcem elzbieta.\n",
+        "        elzbieta jest żoną maciej (malzenstwo(elzbieta, maciej) zwraca true).\n",
+        "        Wszystkie warunki są spełnione, więc tesc(jan, maciej) zwraca true.\n",
+        "\n",
+        "Zapytanie: ciotka(monika, wiktoria).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    ciotka(X, Y) :- kobieta(X), (ojciec(Z, Y) ; matka(Z, Y)), siostra(X, Z).\n",
+        "\n",
+        "    Opis działania:\n",
+        "        Matką wiktoria jest martyna.\n",
+        "        monika jest siostrą martyna (siostra(monika, martyna) zwraca true).\n",
+        "        monika jest kobietą (kobieta(monika) zwraca true).\n",
+        "        Wszystkie warunki są spełnione, więc ciotka(monika, wiktoria) zwraca true.\n",
+        "\n",
+        "Dzięki rekursji i łączeniu warunków w regułach, system Prolog może efektywnie modelować złożone relacje rodzinne. 😊\n",
+        "Powiedziałeś(-aś):\n",
+        "Opisz dokładnie jak działają te reguły w formie\n",
+        "zapytanie:\n",
+        "reguła:\n",
+        "Opis:\n",
+        "2/2\n",
+        "ChatGPT powiedział:\n",
+        "ChatGPT\n",
+        "\n",
+        "Oczywiście! Poniżej przedstawiam dokładne wyjaśnienie, jak działają te reguły, odnosząc się do przykładów zapytań, z uwzględnieniem kolejności sprawdzania warunków.\n",
+        "Zapytanie: przodek(jan, milena).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    przodek(X, Y) :- ojciec(X, Y).\n",
+        "    przodek(X, Y) :- ojciec(X, Z), przodek(Z, Y).\n",
+        "    przodek(X, Y) :- matka(X, Y).\n",
+        "    przodek(X, Y) :- matka(X, Z), przodek(Z, Y).\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy jan jest przodkiem milena.\n",
+        "        Pierwsza reguła: Sprawdza, czy jan jest ojcem milena. Okazuje się, że to nieprawda, ponieważ ojcem milena jest krzysztof, a nie jan.\n",
+        "        Druga reguła: Sprawdza, czy jan jest ojcem jakiejś osoby (elzbieta), a ta osoba jest przodkiem milena. To prowadzi do dalszego sprawdzenia:\n",
+        "            jan jest ojcem elzbieta, a elzbieta jest matką milena, więc jan jest przodkiem milena.\n",
+        "        W ten sposób przodek(jan, milena) zwraca true.\n",
+        "\n",
+        "Zapytanie: brat(grzegorz, tomasz).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    brat(X, Y) :- mezczyzna(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
+        "    brat(X, Y) :- mezczyzna(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy grzegorz i tomasz są braćmi.\n",
+        "        Pierwsza reguła: Sprawdza, czy grzegorz i tomasz mają wspólnego ojca. Okazuje się, że mają (ojcem obu jest stanislaw), a dodatkowo oba są mężczyznami, więc warunek mezczyzna(grzegorz) i mezczyzna(tomasz) jest spełniony. Sprawdzamy jeszcze, czy grzegorz \\= tomasz, co jest prawdą. Zatem ta reguła zwraca true.\n",
+        "        Druga reguła: Jest sprawdzana, ale nie jest potrzebna, ponieważ pierwsza reguła już zwróciła true.\n",
+        "\n",
+        "Zapytanie: siostra(elzbieta, teresa).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    siostra(X, Y) :- kobieta(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
+        "    siostra(X, Y) :- kobieta(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy elzbieta i teresa są siostrami.\n",
+        "        Pierwsza reguła: Sprawdza, czy elzbieta i teresa mają wspólnego ojca. Okazuje się, że mają wspólnego ojca (jan), a dodatkowo są kobietami, więc warunek kobieta(elzbieta) i kobieta(teresa) jest spełniony. Zatem elzbieta i teresa są siostrami, ponieważ oba warunki są spełnione.\n",
+        "        Druga reguła: Ta reguła nie jest wywoływana, ponieważ pierwsza reguła już zwróciła true.\n",
+        "\n",
+        "Zapytanie: kuzyn(szymon, jakub).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    kuzyn(X, Y) :- ojciec(A, X), ojciec(B, Y), brat(A, B), X \\= Y.\n",
+        "    kuzyn(X, Y) :- matka(A, X), matka(B, Y), siostra(A, B), X \\= Y.\n",
+        "    kuzyn(X, Y) :- ojciec(A, X), matka(B, Y), brat(A, B), X \\= Y.\n",
+        "    kuzyn(X, Y) :- matka(A, X), ojciec(B, Y), siostra(A, B), X \\= Y.\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy szymon i jakub są kuzynami.\n",
+        "        Pierwsza reguła: Sprawdza, czy ojciec szymon (grzegorz) i ojciec jakub (tomasz) są braćmi. Okazuje się, że są, ponieważ brat(grzegorz, tomasz) zwrócił true. Zatem warunki tej reguły są spełnione i zwróci ona true.\n",
+        "        Pozostałe reguły nie są wywoływane, ponieważ warunki w pierwszej regule zostały spełnione.\n",
+        "\n",
+        "Zapytanie: dziadek(kazimierz, pawel).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    dziadek(X, Y) :- ojciec(X, Z), (ojciec(Z, Y) ; matka(Z, Y)).\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy kazimierz jest dziadkiem pawel.\n",
+        "        Reguła: Sprawdza, czy kazimierz jest ojcem kogoś (antoni), a ta osoba jest ojcem lub matką pawel. Okazuje się, że kazimierz jest ojcem antoni, a antoni jest ojcem pawel.\n",
+        "        Ponieważ warunki są spełnione, wynik dziadek(kazimierz, pawel) zwraca true.\n",
+        "\n",
+        "Zapytanie: wnuk(jakub, stanislaw).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    wnuk(X, Y) :- mezczyzna(X), (dziadek(Y, X) ; babcia(Y, X)).\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy jakub jest wnukiem stanislaw.\n",
+        "        Reguła: Sprawdza, czy jakub jest mężczyzną (mezczyzna(jakub)), a także czy stanislaw jest dziadkiem jakub. Okazuje się, że stanislaw jest dziadkiem jakub, ponieważ stanislaw jest ojcem grzegorz, a grzegorz jest ojcem jakub.\n",
+        "        Wynik wnuk(jakub, stanislaw) zwraca true.\n",
+        "\n",
+        "Zapytanie: tesc(jan, maciej).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "    tesc(X, Y) :- ojciec(X, Z), malzenstwo(Z, Y).\n",
+        "\n",
+        "    Opis:\n",
+        "        Zapytanie sprawdza, czy jan jest teściem maciej.\n",
+        "        Reguła: Sprawdza, czy jan jest ojcem kogoś (elzbieta), a ta osoba jest żoną maciej. Okazuje się, że elzbieta jest żoną maciej (malzenstwo(elzbieta, maciej) zwróciło true).\n",
+        "        Wynik tesc(jan, maciej) zwraca true.\n",
+        "\n",
+        "Zapytanie: ciotka(monika, wiktoria).\n",
+        "\n",
+        "    Reguła:\n",
+        "\n",
+        "ciotka(X, Y) :- kobieta(X), (ojciec(Z, Y) ; matka(Z, Y)), siostra(X, Z).\n",
+        "\n",
+        "Opis:\n",
+        "\n",
+        "    Zapytanie sprawdza, czy monika jest ciotką wiktoria.\n",
+        "    Reguła: Sprawdza, czy monika jest kobietą, a następnie sprawdza, czy monika jest siostrą rodzica wiktoria. Okazuje się, że monika jest siostrą martyna, a martyna jest matką wiktoria.\n",
+        "    Ponieważ warunki są spełnione, wynik ciotka(monika, wiktoria) zwraca true."
       ],
       "metadata": {
         "id": "fch0XnkSLOLf"
