Utworzono za pomocą Colab

--- a/Prolog2.ipynb
+++ b/Prolog2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVPkd2fKBEHrkGXxZoJ2L9",
+      "authorship_tag": "ABX9TyMepRup7doO3Cw+0SpSlJ0p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,7 @@
         "###Opis:\n",
         "- Reguła najpierw sprawdza, czy `elzbieta` i `teresa` mają wspólnego ojca. Obie mają ojca `jan`.\n",
         "- Następnie sprawdza, czy mają wspólną matkę. Obie mają matkę `helena`.\n",
-        "- `elzbieta` jest kobietą (kobieta(elzbieta) zwraca true), a elzbieta \\= teresa.\n",
+        "- `elzbieta` jest kobietą (`kobieta(elzbieta)` zwraca `true`), a `elzbieta \\= teresa`.\n",
         "- Wszystkie warunki są spełnione, więc `siostra(elzbieta, teresa)` zwraca `true`.\n",
         "\n",
         "## Kuzyn (szymon, jakub).\n",
@@ -306,161 +306,57 @@
         "- Wszystkie warunki są spełnione, więc `kuzyn(szymon, jakub)` zwraca `true`.\n",
         "\n",
         "## Dziadek (kazimierz, pawel).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
+        "```\n",
         "    dziadek(X, Y) :- ojciec(X, Z), (ojciec(Z, Y) ; matka(Z, Y)).\n",
+        "```\n",
+        "#Opis:\n",
+        "- Zapytanie sprawdza, czy `kazimierz` jest dziadkiem `pawel`.\n",
+        "- Sprawdza, czy `kazimierz` jest ojcem kogoś (`antoni`), a ta osoba jest ojcem lub matką `pawel`. Okazuje się, że `kazimierz` jest ojcem `antoni`, a `antoni` jest ojcem `pawel`.\n",
+        "- Ponieważ warunki są spełnione, wynik `dziadek(kazimierz, pawel)` zwraca `true`.\n",
         "\n",
-        "    Opis działania:\n",
-        "        kazimierz jest ojcem antoni.\n",
-        "        antoni jest ojcem pawel.\n",
-        "        Reguła łączy te dwa powiązania i uznaje kazimierz za dziadka pawel.\n",
-        "        Wynik: true.\n",
-        "\n",
-        "Zapytanie: wnuk(jakub, stanislaw).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
+        "## Wnuk (jakub, stanislaw).\n",
+        "```\n",
         "    wnuk(X, Y) :- mezczyzna(X), (dziadek(Y, X) ; babcia(Y, X)).\n",
+        "```\n",
+        "###Opis:\n",
         "\n",
-        "    Opis działania:\n",
-        "        stanislaw jest ojcem grzegorz, a grzegorz jest ojcem jakub.\n",
-        "        Reguła dziadek(stanislaw, jakub) zwróciła true, co spełnia warunki reguły.\n",
-        "        jakub jest mężczyzną (mezczyzna(jakub) zwraca true).\n",
-        "        Wszystkie warunki są spełnione, więc wnuk(jakub, stanislaw) zwraca true.\n",
+        "- Zapytanie sprawdza, czy `jakub` jest wnukiem `stanislaw`.\n",
+        "- Sprawdza, czy `jakub` jest mężczyzną (`mezczyzna(jakub)`), a także czy `stanislaw` jest dziadkiem `jakub`. Okazuje się, że jest, ponieważ `stanislaw` jest ojcem `tomasz`, a `tomasz` jest ojcem `jakub`.\n",
+        "- Więc wynik `wnuk(jakub, stanislaw)` zwraca `true`.\n",
         "\n",
-        "Zapytanie: tesc(jan, maciej).\n",
+        "## Tesc (jan, maciej).\n",
         "\n",
-        "    Reguła:\n",
-        "\n",
+        "```\n",
         "    tesc(X, Y) :- ojciec(X, Z), malzenstwo(Z, Y).\n",
+        "```\n",
+        "###Opis:\n",
+        "- Zapytanie sprawdza, czy `jan` jest teściem `maciej`.\n",
+        "- Sprawdza, czy `jan` jest ojcem kogoś (`elzbieta`), kto jest żoną `maciej`. Okazuje się, że jest (`malzenstwo(elzbieta, maciej)` zwróciło `true`).\n",
+        "- Wiec wynik `tesc(jan, maciej)` zwraca `true`.\n",
         "\n",
-        "    Opis działania:\n",
-        "        jan jest ojcem elzbieta.\n",
-        "        elzbieta jest żoną maciej (malzenstwo(elzbieta, maciej) zwraca true).\n",
-        "        Wszystkie warunki są spełnione, więc tesc(jan, maciej) zwraca true.\n",
+        "## Ciotka (monika, wiktoria).\n",
         "\n",
-        "Zapytanie: ciotka(monika, wiktoria).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
+        "```\n",
         "    ciotka(X, Y) :- kobieta(X), (ojciec(Z, Y) ; matka(Z, Y)), siostra(X, Z).\n",
-        "\n",
-        "    Opis działania:\n",
-        "        Matką wiktoria jest martyna.\n",
-        "        monika jest siostrą martyna (siostra(monika, martyna) zwraca true).\n",
-        "        monika jest kobietą (kobieta(monika) zwraca true).\n",
-        "        Wszystkie warunki są spełnione, więc ciotka(monika, wiktoria) zwraca true.\n",
-        "\n",
-        "Dzięki rekursji i łączeniu warunków w regułach, system Prolog może efektywnie modelować złożone relacje rodzinne. 😊\n",
-        "Powiedziałeś(-aś):\n",
-        "Opisz dokładnie jak działają te reguły w formie\n",
-        "zapytanie:\n",
-        "reguła:\n",
+        "```\n",
         "Opis:\n",
-        "2/2\n",
-        "ChatGPT powiedział:\n",
-        "ChatGPT\n",
+        "- Zapytanie sprawdza, czy `monika` jest ciotką `wiktoria`.\n",
+        "- Sprawdza, czy `monika` jest kobietą, a następnie sprawdza, czy `monika` jest siostrą rodzica `wiktoria`. Okazuje się, że `monika` jest siostrą `martyna`, która jest matką `wiktoria`\n",
+        "- Ponieważ warunki są spełnione, wynik `ciotka(monika, wiktoria)` zwraca `true`.\n",
         "\n",
-        "Oczywiście! Poniżej przedstawiam dokładne wyjaśnienie, jak działają te reguły, odnosząc się do przykładów zapytań, z uwzględnieniem kolejności sprawdzania warunków.\n",
-        "Zapytanie: przodek(jan, milena).\n",
+        "## Potomek (monika, jan).\n",
+        "```\n",
+        "potomek(X, Y) :- przodek(Y, X).\n",
+        "```\n",
+        "###Opis:\n",
         "\n",
-        "    Reguła:\n",
-        "\n",
-        "    przodek(X, Y) :- ojciec(X, Y).\n",
-        "    przodek(X, Y) :- ojciec(X, Z), przodek(Z, Y).\n",
-        "    przodek(X, Y) :- matka(X, Y).\n",
-        "    przodek(X, Y) :- matka(X, Z), przodek(Z, Y).\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy jan jest przodkiem milena.\n",
-        "        Pierwsza reguła: Sprawdza, czy jan jest ojcem milena. Okazuje się, że to nieprawda, ponieważ ojcem milena jest krzysztof, a nie jan.\n",
-        "        Druga reguła: Sprawdza, czy jan jest ojcem jakiejś osoby (elzbieta), a ta osoba jest przodkiem milena. To prowadzi do dalszego sprawdzenia:\n",
-        "            jan jest ojcem elzbieta, a elzbieta jest matką milena, więc jan jest przodkiem milena.\n",
-        "        W ten sposób przodek(jan, milena) zwraca true.\n",
-        "\n",
-        "Zapytanie: brat(grzegorz, tomasz).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    brat(X, Y) :- mezczyzna(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
-        "    brat(X, Y) :- mezczyzna(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy grzegorz i tomasz są braćmi.\n",
-        "        Pierwsza reguła: Sprawdza, czy grzegorz i tomasz mają wspólnego ojca. Okazuje się, że mają (ojcem obu jest stanislaw), a dodatkowo oba są mężczyznami, więc warunek mezczyzna(grzegorz) i mezczyzna(tomasz) jest spełniony. Sprawdzamy jeszcze, czy grzegorz \\= tomasz, co jest prawdą. Zatem ta reguła zwraca true.\n",
-        "        Druga reguła: Jest sprawdzana, ale nie jest potrzebna, ponieważ pierwsza reguła już zwróciła true.\n",
-        "\n",
-        "Zapytanie: siostra(elzbieta, teresa).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    siostra(X, Y) :- kobieta(X), ojciec(Z, X), ojciec(Z, Y), X \\= Y.\n",
-        "    siostra(X, Y) :- kobieta(X), matka(Z, X), matka(Z, Y), X \\= Y.\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy elzbieta i teresa są siostrami.\n",
-        "        Pierwsza reguła: Sprawdza, czy elzbieta i teresa mają wspólnego ojca. Okazuje się, że mają wspólnego ojca (jan), a dodatkowo są kobietami, więc warunek kobieta(elzbieta) i kobieta(teresa) jest spełniony. Zatem elzbieta i teresa są siostrami, ponieważ oba warunki są spełnione.\n",
-        "        Druga reguła: Ta reguła nie jest wywoływana, ponieważ pierwsza reguła już zwróciła true.\n",
-        "\n",
-        "Zapytanie: kuzyn(szymon, jakub).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    kuzyn(X, Y) :- ojciec(A, X), ojciec(B, Y), brat(A, B), X \\= Y.\n",
-        "    kuzyn(X, Y) :- matka(A, X), matka(B, Y), siostra(A, B), X \\= Y.\n",
-        "    kuzyn(X, Y) :- ojciec(A, X), matka(B, Y), brat(A, B), X \\= Y.\n",
-        "    kuzyn(X, Y) :- matka(A, X), ojciec(B, Y), siostra(A, B), X \\= Y.\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy szymon i jakub są kuzynami.\n",
-        "        Pierwsza reguła: Sprawdza, czy ojciec szymon (grzegorz) i ojciec jakub (tomasz) są braćmi. Okazuje się, że są, ponieważ brat(grzegorz, tomasz) zwrócił true. Zatem warunki tej reguły są spełnione i zwróci ona true.\n",
-        "        Pozostałe reguły nie są wywoływane, ponieważ warunki w pierwszej regule zostały spełnione.\n",
-        "\n",
-        "Zapytanie: dziadek(kazimierz, pawel).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    dziadek(X, Y) :- ojciec(X, Z), (ojciec(Z, Y) ; matka(Z, Y)).\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy kazimierz jest dziadkiem pawel.\n",
-        "        Reguła: Sprawdza, czy kazimierz jest ojcem kogoś (antoni), a ta osoba jest ojcem lub matką pawel. Okazuje się, że kazimierz jest ojcem antoni, a antoni jest ojcem pawel.\n",
-        "        Ponieważ warunki są spełnione, wynik dziadek(kazimierz, pawel) zwraca true.\n",
-        "\n",
-        "Zapytanie: wnuk(jakub, stanislaw).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    wnuk(X, Y) :- mezczyzna(X), (dziadek(Y, X) ; babcia(Y, X)).\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy jakub jest wnukiem stanislaw.\n",
-        "        Reguła: Sprawdza, czy jakub jest mężczyzną (mezczyzna(jakub)), a także czy stanislaw jest dziadkiem jakub. Okazuje się, że stanislaw jest dziadkiem jakub, ponieważ stanislaw jest ojcem grzegorz, a grzegorz jest ojcem jakub.\n",
-        "        Wynik wnuk(jakub, stanislaw) zwraca true.\n",
-        "\n",
-        "Zapytanie: tesc(jan, maciej).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "    tesc(X, Y) :- ojciec(X, Z), malzenstwo(Z, Y).\n",
-        "\n",
-        "    Opis:\n",
-        "        Zapytanie sprawdza, czy jan jest teściem maciej.\n",
-        "        Reguła: Sprawdza, czy jan jest ojcem kogoś (elzbieta), a ta osoba jest żoną maciej. Okazuje się, że elzbieta jest żoną maciej (malzenstwo(elzbieta, maciej) zwróciło true).\n",
-        "        Wynik tesc(jan, maciej) zwraca true.\n",
-        "\n",
-        "Zapytanie: ciotka(monika, wiktoria).\n",
-        "\n",
-        "    Reguła:\n",
-        "\n",
-        "ciotka(X, Y) :- kobieta(X), (ojciec(Z, Y) ; matka(Z, Y)), siostra(X, Z).\n",
-        "\n",
-        "Opis:\n",
-        "\n",
-        "    Zapytanie sprawdza, czy monika jest ciotką wiktoria.\n",
-        "    Reguła: Sprawdza, czy monika jest kobietą, a następnie sprawdza, czy monika jest siostrą rodzica wiktoria. Okazuje się, że monika jest siostrą martyna, a martyna jest matką wiktoria.\n",
-        "    Ponieważ warunki są spełnione, wynik ciotka(monika, wiktoria) zwraca true."
+        "- Zapytanie sprawdza, czy `monika` jest potomkiem `jan`.\n",
+        "- Sprawdza, czy `jan` jest przodkiem `moniki` za pomocą reguły `przodek/2`, odwracając jej argumenty.\n",
+        "- Prolog weryfikuje, czy `jan` jest przodkiem `moniki`.\n",
+        "- Wykorzystuje fakty dotyczące `ojciec` i `matka`, a także rekurencyjnie przeszukuje pokolenia:\n",
+        "  - Z faktu `ojciec(jan, elzbieta)` wiadomo, że `jan` jest ojcem `elzbiety`.\n",
+        "  - Z faktu `matka(elzbieta, monika)` wiadomo, że `elzbieta` jest matką `moniki`.\n",
+        "  - Z tego wynika, że `jan` jest przodkiem `moniki`, więc `monika` jest potomkiem `jan`.\n"
       ],
       "metadata": {
         "id": "fch0XnkSLOLf"
@@ -1038,7 +934,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Sprawdzenie, czy produkt jest dostępny:**\n",
+        "##  **1.Sprawdzenie, czy produkt jest dostępny:**\n",
         "```\n",
         "dostepny_produkt(X) :-\n",
         "    produkt(X, Ilosc, _),\n",
@@ -1049,7 +945,7 @@
         "- Następnie sprawdza, czy jego ilość (`Ilosc`) jest większa niż 0 (`Ilosc > 0`).\n",
         "- Jeśli produkt ma ilość większą niż 0, zapytanie zwróci prawdę, oznaczając, że produkt jest dostępny.\n",
         "\n",
-        "##**Przeniesienie produktu do innego sektora:**\n",
+        "## **2.Przeniesienie produktu do innego sektora:**\n",
         "```\n",
         "przenies_produkt(X, NowySektor) :-\n",
         "    produkt(X, Ilosc, _),\n",
@@ -1064,7 +960,7 @@
         "- `assertz(produkt(X, Ilosc, NowySektor))` dodaje produkt z tą samą ilością (`Ilosc`) do nowego sektora (`NowySektor`).\n",
         "- Jeśli produkt jest dostępny, zostanie przeniesiony do sektora `sektor_z`.\n",
         "\n",
-        "## **Uzupełnienie stanu produktu:**\n",
+        "## **3. Uzupełnienie stanu produktu:**\n",
         "```\n",
         "uzupelnij_stan(X, N) :-\n",
         "    produkt(X, Ilosc, Sektor),\n",
@@ -1081,7 +977,7 @@
         "- Nowa ilość zostaje zapisana w bazie danych, przy czym produkt pozostaje w tym samym sektorze `assertz(produkt(X, NowaIlosc, Sektor))`.\n",
         "- Po wykonaniu zapytania ilość produktu `telewizor_Sony_4k` zostaje zwiększona o 5.\n",
         "\n",
-        "## **Sprawdzenie dostępności produktu w określonym sektorze:**\n",
+        "## **4. Sprawdzenie dostępności produktu w określonym sektorze:**\n",
         "```\n",
         "dostepny_w_sektorze(X, Sektor) :-\n",
         "    produkt(X, Ilosc, Sektor),\n",
@@ -1092,7 +988,7 @@
         "- Jeśli produkt znajduje się w tym sektorze i jego ilość jest większa niż **0** (`Ilosc > 0`), zapytanie zwróci prawdę.\n",
         "- Jeśli produkt jest dostępny w danym sektorze, wynik to `true`.\n",
         "\n",
-        "##**Znajdowanie produktów w określonym sektorze:**\n",
+        "##**5. Znajdowanie produktów w określonym sektorze:**\n",
         "```\n",
         "produkty_w_sektorze(Sektor, Produkty) :-\n",
         "    findall(X, produkt(X, _, Sektor), Produkty).\n",
@@ -1103,7 +999,7 @@
         "- Dla sektora `sektor_a` zostanie zwrócony listę produktów, które się tam znajdują.\n",
         "- W wyniku tego zapytania, `Produkty` zawiera listę produktów, w tym przypadku tylko `telewizor_Sony_4k`.\n",
         "\n",
-        "##**Usuwanie produktu z bazy danych:**\n",
+        "##**6. Usuwanie produktu z bazy danych:**\n",
         "```\n",
         "usun_produkt(X) :-\n",
         "    produkt(X, Ilosc, _),\n",
@@ -1116,7 +1012,7 @@
         "- Jeśli ilość wynosi 0, produkt zostaje usunięty z bazy danych za pomocą `(produkt(X, Ilosc, _))`.\n",
         "- Jeśli ilość produktu jest większa niż 0, produkt nie zostanie usunięty. W przypadku zapytania o produkt, który ma ilość większą niż 0, zapytanie nie wykona się.\n",
         "\n",
-        "## **Lista produktów z ich ilościami:**\n",
+        "## **7. Lista produktów z ich ilościami:**\n",
         "```\n",
         "lista_produktow :-\n",
         "    listing(produkt).\n",
@@ -1125,7 +1021,7 @@
         "- Reguła `listing(produkt)` wypisuje wszystkie produkty w bazie danych, wyświetlając je w postaci ich definicji.\n",
         "- Zapytanie wyświetli wszystkie produkty zapisane w bazie, wraz z ich ilościami i sektorami.\n",
         "\n",
-        "##**Tworzenie raportu z dostępnych produktów:**\n",
+        "##**8. Tworzenie raportu z dostępnych produktów:**\n",
         "```\n",
         "raport_dostepnych :-\n",
         "    findall((X, Ilosc, Sektor), (produkt(X, Ilosc, Sektor), Ilosc > 0), Raport),\n",
@@ -1138,7 +1034,7 @@
         "- Produkty te zostają zapisane w zmiennej `Raport` i wypisane za pomocą `writeln`.\n",
         "- Zapytanie zwróci raport produktów dostępnych w bazie danych.\n",
         "\n",
-        "##**Sortowanie produktów według ilości:**\n",
+        "##**9. Sortowanie produktów według ilości:**\n",
         "\n",
         "```\n",
         "sortuj_produkty_po_ilosci(Sorted) :-\n",
@@ -1367,35 +1263,35 @@
     {
       "cell_type": "code",
       "source": [
-        "% Sprawdzenie, czy istnieje bezpośrednie połączenie między X a Y\n",
+        "% 1. Sprawdzenie, czy istnieje bezpośrednie połączenie między X a Y\n",
         "?- droga(warszawa, krakow). +\n",
         "\n",
-        "% Reguła obliczająca czas przejazdu między dwoma miastami, uwzględniająca połączenia pośrednie\n",
+        "% 2. Reguła obliczająca czas przejazdu między dwoma miastami, uwzględniająca połączenia pośrednie\n",
         "?- czas_przejazdu(warszawa, krakow, Czas). =\n",
         "Czas = 5\n",
         "Czas = 15\n",
         "Czas = 25\n",
         "Czas = 35\n",
         "\n",
-        "% Reguła wyznaczająca najkrótszą trasę między dwoma miastami\n",
+        "% 3. Reguła wyznaczająca najkrótszą trasę między dwoma miastami\n",
         "?- najkrotsza_trasa(warszawa, krakow, Trasa, Czas). =\n",
         "Czas = 5,\n",
         "Trasa = [warszawa, krakow]\n",
         "\n",
-        "% Reguła znajdowania wszystkich miast, które można osiągnąć z miasta X\n",
+        "% 4. Reguła znajdowania wszystkich miast, które można osiągnąć z miasta X\n",
         "?- miasta_dostepne(warszawa, Miasta). =\n",
         "Miasta = [krakow, poznan, wroclaw, gdansk, szczecin, lublin, bialystok, opole, torun, legnica, olsztyn, radom, mazury]\n",
         "\n",
-        "% Dodawanie nowego połączenia do bazy danych\n",
+        "% 5. Dodawanie nowego połączenia do bazy danych\n",
         "?- dodaj_droga(zielona_gora, warszawa, 8) +\n",
         "\n",
-        "% Usuwanie połączenia z bazy danych\n",
+        "% 6. Usuwanie połączenia z bazy danych\n",
         "?- usun_droga(warszawa, krakow). +\n",
         "\n",
-        "% Reguła sprawdzająca, czy droga działa w obie strony\n",
+        "% 7. Reguła sprawdzająca, czy droga działa w obie strony\n",
         "?- droga_obie_strony(warszawa, krakow). +\n",
         "\n",
-        "% Reguła znajdująca miasto z największą liczbą połączeń\n",
+        "% 8. Reguła znajdująca miasto z największą liczbą połączeń\n",
         "?- miasto_z_najwieksza_liczba_polaczen(Miasto). =\n",
         "Miasto = warszawa\n"
       ],
